# FiniteElementAnalysis

./: README.md  论文尝试3.docx
C++/: CMakeLists.txt  UUV_Model.cc  UUV_Model.h
C++/cpp_solver/: UUVHull.hpp  UUVHull（复件）.txt  wave_cuda-cu.txt  wave_simulation_cpu.cpp  wave_simulation_cpu.hpp  wave_simulation_gpu.cpp  wave_simulation_gpu（复件）.cpp  wave_simulation_gpu（复件）cpp.txt
C++/cpp_solver/old/: UUVHull.cpp  test_cuda.cu  wave_cuda.cu  wave_simulation_gpu.cpp  wave_simulation_gpu.hpp
C++/data/record/motion/: Model_State20260107_1105.csv
C++/data/wave_parameter/: wave_JONSWAP_Hs0.0_T3.0_N30_M20_s5_th60.00_depth20.00.csv
C++/python_viz/: vis_simulation.py  viz_hull.py
Python/: 1B恢复力-微元积分-gpu-copy-实际仿真.py  1B恢复力-微元积分-gpu-单个.py  run.sh  小方块单个仿真.py  小方块单个仿真_final.py
Python/old/: 1A恢复力-微元积分.py  1B恢复力-微元积分.py  1C计算动压.py  1_波浪动压 copy.py  2.py  optimized_model.stl  phtsical_model_self1.py  processed_model.stl  恢复力-微元积分_jonswap.py  恢复力-微元积分_jonswap_方向改进_全局可视化.py  恢复力-微元积分_pierson-Moskowitz.py  数据生成.py
Python/old/floater_trace/: floater_trace_11.txt  floater_trace_15.txt  floater_trace_17.txt  floater_trace_18.txt  floater_trace_19.txt  floater_trace_2.txt  floater_trace_22.txt  floater_trace_23.txt  floater_trace_24.txt  floater_trace_26.txt  floater_trace_33.txt  floater_trace_36.txt  floater_trace_38.txt  floater_trace_39.txt  floater_trace_4.txt  floater_trace_6.txt  floater_trace_7.txt  floater_trace_8.txt  params.txt
Python/old/use_model/: read_stl.py
Python/old/use_model/model/: 1.STL
Python/old1/: 1.py  1_z轴朝上.py  3.py  floater_trace.txt  floater_trace（复件）.txt  trace_path  恢复力-传统.py  恢复力-微元积分_jonswap_方向改进.py
Python/old1/floater_trace/: floater_trace_0.txt  floater_trace_1.txt  floater_trace_10.txt  floater_trace_12.txt  floater_trace_13.txt  floater_trace_14.txt  floater_trace_16.txt  floater_trace_20.txt  floater_trace_21.txt  floater_trace_25.txt  floater_trace_27.txt  floater_trace_28.txt  floater_trace_29.txt  floater_trace_3.txt  floater_trace_30.txt  floater_trace_31.txt  floater_trace_32.txt  floater_trace_34.txt  floater_trace_35.txt  floater_trace_37.txt  floater_trace_5.txt  floater_trace_9.txt
Python/old1/use_model/model/: 2.STL  22.STL  222.STL  2_.STL
Python/old1/手册波浪/: 手册波浪.py
Python/old2/use_model/: 1.py  1B恢复力-微元积分-gpu-copy -单个.py  1B恢复力-微元积分-gpu-copy.py  1B恢复力-微元积分-gpu.py  1B恢复力-微元积分.py  Hs-0.8-T1-5-main_theta-0-current_force_mag-0-current_angle-0.5235987755982988.csv  水动力参数.c  生成随机组合.py  立方体仿真.py
Python/use_model/: try_stl.py  use_stl.py
sim_result/第三组/: Hs-0.8-T1-4.5-main_theta-0-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-100-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-119-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-140-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-160-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-180-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-20-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-200-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-220-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-239-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-260-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-280-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-300-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-320-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-340-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-360-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-40-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-59-tau_x0-0.0.csv  Hs-0.8-T1-4.5-main_theta-80-tau_x0-0.0.csv
sim_result/第四组/: Hs-1.5-T1-7.0-main_theta-0-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-100-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-119-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-140-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-160-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-180-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-20-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-200-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-220-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-239-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-260-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-280-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-300-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-320-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-340-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-360-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-40-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-59-tau_x0-0.0.csv  Hs-1.5-T1-7.0-main_theta-80-tau_x0-0.0.csv
